fix: overflow-x-hidden mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   background-color: var(--color-brand-bg);
   color: var(--color-brand-text);
   font-family: var(--font-body);
